...
    android:elevation="4dp"
    android:focusable="true"
    android:onClick="@{(v) -> viewModel.clickOnSummaryTile()}"
    app:roundedRectDrawableWithColor="@{viewModel.backgroundColor}">

    <org.oppia.android.app.customview.LessonThumbnailImageView
      android:id="@+id/walkthrough_topic_thumbnail_image_view"
      android:layout_width="match_parent"
      android:layout_height="92dp"
      android:importantForAccessibility="no"
      android:scaleType="centerInside"
      app:entityId="@{viewModel.topicSummary.topicId}"
      app:entityType="@{viewModel.topicEntityType}"
...
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
          android:id="@+id/walkthrough_topic_name_text_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="6dp"
          android:ellipsize="end"
          android:fontFamily="sans-serif-medium"
          android:gravity="top"
...
